@startuml
title LocalPose Subsystem Class Diagram
namespace fast::rf {
  namespace messages {
    namespace SensorMsgs {
      class ImuMsg <<(M,#FFFF00)>>
    }
    namespace GeometryMsgs {
      class OdomMsg <<(M,#FFFF00)>>
    }
  }
  namespace PoseSystem {
    package LocalPoseSubsystem #LightYellow;line:blue {
      interface ILocalPoseSubsystem {

      }
      abstract BaseLocalPoseSubsystem {

      }
      BaseLocalPoseSubsystem .up.|> ILocalPoseSubsystem
      class BasicLocalPoseSubsystem {
      }
      BasicLocalPoseSubsystem -up-|> BaseLocalPoseSubsystem
      class DummyLocalPoseSubsystem {
      }
      DummyLocalPoseSubsystem -up-|> BaseLocalPoseSubsystem
      namespace InertialSensorFuser {
        interface IInertialSensorFuserProcess #LimeGreen {}
        class BasicInertialSensorFuserProcess #Pink {}
        BasicInertialSensorFuserProcess -up-|> IInertialSensorFuserProcess
      }

      
      namespace WheelOdometryFuser {

      }
      namespace VisualOdometryFuser {

      }
      namespace LocalPoseFuser {
        interface ILocalPoseFuserProcess #LimeGreen {}
        class BasicLocalPoseFuserProcess #Pink {}
        BasicLocalPoseFuserProcess -up-|> ILocalPoseFuserProcess
      }
      

    }
  }
}
@enduml